# wgcp

./: .gitignore  Cargo.toml  README.md
config/: client.yaml  server.yaml
src/: error.rs  lib.rs  socket_filter.rs  wg.rs
src/config/: client.rs  server.rs
src/message/: error.rs  message.rs  mod.rs  request.rs  response.rs
