[package]
name = "wgcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
bytes = "1.1.0"
env_logger = "0.9.0"
futures-channel = "0.3.21"
futures-util = "0.3.21"
libc = "0.2.122"
log = "0.4.16"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_yaml = "0.8.23"
socket2 = "0.4.4"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread", "sync", "process", "time" ] }
tokio-tungstenite = "0.17.1"
url = "2.2.2"
