[package]
name = "wgcp"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
env_logger = "0.9.0"
futures-channel = "0.3.21"
futures-util = "0.3.21"
http = "0.2.7"
libc = "0.2.125"
log = "0.4.17"
once_cell = "1.10.0"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_yaml = "0.8.24"
socket2 = "0.4.4"
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = [ "macros", "rt-multi-thread", "sync", "process", "time" ] }
tokio-tungstenite = { version = "0.17.1", features = [ "native-tls" ] }
ulid = { version = "0.5.0", features = [ "serde" ] }
url = "2.2.2"
